blog application complete

--- a/src/app/blog-create/blog-create.component.html
+++ b/src/app/blog-create/blog-create.component.html
@@ -1,3 +1,37 @@
-<p>
-  blog-create works!
-</p>
+<div class="container">
+<div class="row">
+<div class="col-md-12">
+<h3>Create Blog</h3>
+<form #createBlogForm="ngForm" (ngSubmit)="createBlog()">
+
+<div class="form-group">
+  <label>Blog Title</label>
+  <input type="text" class="form-control" name="blogTitle" [(ngModel)]="blogTitle" #title="ngModel" required>
+  <small [hidden]="title.valid || title.pristine" class="form-text text-danger">*Blog Title is required.</small>
+</div>
+
+<div class="form-group">
+  <label>Description</label>
+  <input type="text" class="form-control" name="blogDescription" [(ngModel)]="blogDescription" #description="ngModel" required>
+  <small [hidden]="description.valid || description.pristine" class="form-text text-danger">*Blog Description is required.</small>
+</div>
+
+<div class="form-group">
+  <label>Enter the blog body</label>
+  <textarea class="form-control" name="blogBodyHtml" [(ngModel)]="blogBodyHtml" #bodyHtml="ngModel" rows="3" required></textarea>
+  <small [hidden]="bodyHtml.valid || bodyHtml.pristine" class="form-text text-danger">*Blog Body is required.</small>
+</div>
+<div class="form-group">
+  <label>Category</label>
+  <select [(ngModel)]="blogCategory" #category="ngModel" name="blogCategory" class="form-control" id="category" required>
+    <option *ngFor="let category of possibleCategories" [value]="category">{{category}}</option>
+  </select>
+</div>
+
+<button type="submit" class="btn btn-primary" [disabled]="!createBlogForm.form.valid">Create Blog</button>
+
+
+</form>
+</div>
+</div>
+</div>
