--- a/src/app/blog-view/blog-view.component.html
+++ b/src/app/blog-view/blog-view.component.html
@@ -1,5 +1,5 @@
-<div class="container text-center">
-  <div class="row" *ngIf="currentBlog">
+<div class="container text-center" *ngIf="currentBlog">
+  <div class="row">
     <div class="col-md-12">
       <h2>{{currentBlog.title}}</h2>
       <p>posted by {{currentBlog.author}} on {{currentBlog.created}}</p>
@@ -13,15 +13,15 @@
     </div>
   </div>
 
-<div class="row" *ngIf="currentBlog">
+<div class="row">
   <div class="col-md-4">
     <a  [routerLink]="['/edit',currentBlog.blogId]" class="btn btn-primary" role="button">Edit</a>
   </div>
   <div class="col-md-4">
-    <a class="btn btn-danger" role="button">Delete</a>
+    <a class="btn btn-danger" role="button" (click)="deleteThisBlog()">Delete</a>
   </div>
   <div class="col-md-4">
-      <a class="btn btn-warning" role="button">Go Back</a>
+      <a class="btn btn-warning" role="button" (click)="goBackToPreviousPage()">Go Back</a>
     </div>
 </div>
 
