--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,14 +13,14 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" [routerLink]="['/home']">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" [routerLink]="['/about']">About</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">Post a blog</a>
+          <a class="nav-link" [routerLink]="['/create']">Post a blog</a>
         </li>
       </ul>
 
