--- a/src/app/blog-edit/blog-edit.component.html
+++ b/src/app/blog-edit/blog-edit.component.html
@@ -29,7 +29,7 @@
   </select>
 </div>
 
-<button type="submit" class="btn btn-primary" [disabled]="!createBlogForm.form.valid">Create Blog</button>
+<button type="submit" class="btn btn-primary" [disabled]="!createBlogForm.form.valid">Edit Blog</button>
 
 
 </form>
